--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,11 +144,11 @@ a {
   text-decoration: none;
 }
 
-img { img {
+img { 
   max-width: 100%;
   height: auto;
   display: block;
-}}
+}
 
 input,
 button {
